changed side salad text

--- a/index.html
+++ b/index.html
@@ -170,13 +170,15 @@
 					<div class="col col-md-auto">
 						<h3 class="h3-food-item">Side Salad</h3>
 						<p class="price">$2.50</p>
-						<p class="info">Garden salad with tomatoes and onions.</p>
+						<p class="info">Small garden salad with tomatoes and onions.</p>
 						<p class="types"><strong>Types: </strong>original, ginger, sesame vinaigrette</p>
 					</div>
 					<div class="col col-md-auto">
 						<img src="images/side-salad.jpg" class="food-img">
 					</div>
 				</div>
+
+		<!--next to add: house salad? or just Grilled Chicken or Roast Pork Salad$12.95Crisp Fried Chicken or Fresh Shrimp Salad$12.95 from allmenus-->
 
 
 <!--Javascript BootStrap script-->
