added more sections

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Restaurant Menu</title>
-		<link rel="shortcut icon" href="image/favicon.ico"/>
+		<link rel="shortcut icon" href="images/favicon.ico"/>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -53,7 +53,7 @@
 		        	<a class="nav-link" href="#chefs">Chef's Specialties</a>
 				</li>
 				<li class="nav-item">
-		        	<a class="nav-link" href="#drinks">Beverages</a>
+		        	<a class="nav-link" href="#drinks">Bubble Tea</a>
 				</li>
 		  	</ul>
 		</div>
@@ -166,6 +166,7 @@
 	<div class="container">
 		<h1 class="h1-title" id="salads">Salads</h1>
 		<h2 class="h2-subtitle">Choice of ginger dressing or sesame vinaigrette soy sauce</h2>
+
 			<div class="row row-style justify-content-center">
 					<div class="col col-md-auto">
 						<h3 class="h3-food-item">Side Salad</h3>
@@ -176,10 +177,160 @@
 					<div class="col col-md-auto">
 						<img src="images/side-salad.jpg" class="food-img">
 					</div>
+			</div>
+
+				<div class="row row-style justify-content-center">
+					<div class="col col-md-auto">
+						<img src="images/chicken-salad.jpg" class="food-img">
+					</div>
+					<div class="col col-md-auto">
+						<h3 class="h3-food-item">Grilled Chicken Salad</h3>
+						<p class="price">$12.95</p>
+						<p class="info">Spring lettuce mix with tomatoes, advocado, onion, and cucumber with chicken.</p>
+						<p class="types"><strong>Types: </strong>grilled chicken, fried chicken, roast pork</p>
+					</div>
+				</div>
+	</div>
+		
+		<!--img breakpoint-->
+		<img src="images/rice-and-chopsticks.jpg" class="img-break">
+
+		<!--content:Chef's Specialties-->
+		<div class="container">
+			<h1 class="h1-title" id="chefs">Chef's Specialties</h1>
+			<h2 class="h2-subtitle">Served with rice or tofu</h2>
+
+			<div class="row row-style justify-content-center">
+				<div class="col col-md-auto">
+					<h3 class="h3-food-item">Orange Chicken</h3>
+						<p class="price">$13.95</p>
+						<p class="info">Breaded chicken coated with sweet and salty orange sauce.</p>
+						<p class="types"><strong>Types: </strong>orange, general, sesame</p>
+				</div>
+					<div class="col col-md-auto">
+						<img src="images/orange-chicken.jpg" class="food-img">
+					</div>
 				</div>
 
-		<!--next to add: house salad? or just Grilled Chicken or Roast Pork Salad$12.95Crisp Fried Chicken or Fresh Shrimp Salad$12.95 from allmenus-->
+			<div class="row row-style justify-content-center">
+				<div class="col col-md-auto">
+					<img src="images/peking-pork.jpg" class="food-img">
+				</div>
+				<div class="col col-md-auto">
+					<h3 class="h3-food-item">Peking Pork Chop</h3>
+						<p class="price">$15.95</p>
+						<p class="info">Sweet and sour style of pork or rib.</p>
+						<p class="types"><strong>Types: </strong>peking, salt & pepper, ribs</p>
+				</div>
+			</div>
 
+			<div class="row row-style justify-content-center">
+				<div class="col col-md-auto">
+					<h3 class="h3-food-item">Honey Walnut Shrimp</h3>
+						<p class="price">$16.95</p>
+						<p class="info">Shrimp or chicken with assorted veggies topped with honey walnuts.</p>
+						<p class="types"><strong>Types: </strong>shrimp, chicken, mixed</p>
+				</div>
+					<div class="col col-md-auto">
+						<img src="images/honey-walnut.jpg" class="food-img">
+					</div>
+				</div>
+			</div>
+
+
+			<!--img brakpoint-->
+
+			
+
+			<img src="images/fortune-cookies.jpg" class="img-break">
+
+			<!--content:desserts-->
+
+			<div class="container">
+				<h1 class="h1-title" id="desserts">Desserts</h1>
+				<h2 class="h2-subtitle">Enjoy our variety of delightful treats</h2>
+
+			<div class="row row-style justify-content-center">
+				<div class="col col-md-auto">
+					<h3 class="h3-food-item">Ice Cream</h3>
+						<p class="price">$7.95+</p>
+						<p class="info">8oz, 16oz, 32oz of scoops of icecream</p>
+						<p class="types"><strong>Types: </strong>vanilla, chocolate, pistachio</p>
+				</div>
+					<div class="col col-md-auto">
+						<img src="images/pistachio.jpg" class="food-img">
+					</div>
+				</div>
+
+			<div class="row row-style justify-content-center">
+				<div class="col col-md-auto">
+					<img src="images/mochi.jpg" class="food-img">
+				</div>
+				<div class="col col-md-auto">
+					<h3 class="h3-food-item">Mochi Rice Cake with Red Bean</h3>
+						<p class="price">$7.95+</p>
+						<p class="info">Sweet mochi ice cream</p>
+						<p class="types"><strong>Types: </strong>green tea, red bean, mango</p>
+				</div>
+			</div>
+
+			<div class="row row-style justify-content-center">
+				<div class="col col-md-auto">
+					<h3 class="h3-food-item">Fried Ice Cream</h3>
+						<p class="price">$8.95</p>
+						<p class="info">Warm, crispy shell of batter around cold ice cream.</p>
+						<p class="types"><strong>Types: </strong>vanilla, chocolate, pistachio</p>
+				</div>
+					<div class="col col-md-auto">
+						<img src="images/fried-icecream.jpg" class="food-img">
+					</div>
+				</div>
+			</div>
+
+			<!--img breakpoint-->
+
+			<img src="images/green-tea.jpg" class="img-break">
+
+			<!--content:boba tea & smoothies-->
+			<div class="container">
+					<h1 class="h1-title" id="drinks">Boba Tea or Smoothies</h1>
+					<h2 class="h2-subtitle">Milk tea beverages with tapioca balls</h2>
+
+				<div class="row row-style justify-content-center">
+					<div class="col col-md-auto">
+						<h3 class="h3-food-item">Original</h3>
+							<p class="price">$4.50</p>
+							<p class="info">Milk and green tea with boba</p>
+					</div>
+						<div class="col col-md-auto">
+							<img src="images/green-boba.jpg" class="food-img">
+						</div>
+					</div>
+
+				<div class="row row-style justify-content-center">
+					<div class="col col-md-auto">
+						<img src="images/boba.jpg" class="food-img">
+					</div>
+					<div class="col col-md-auto">
+						<h3 class="h3-food-item">Bubble Tea Smoothie</h3>
+							<p class="price">$4.75</p>
+							<p class="info">Choose any fruit, coconut or mixed, flavor</p>
+							<p class="types"><strong>Types: </strong>mango, strawberry, honey dew, cantaloupe,<br> watermelon, pineapple, blueberry, raspberry, orange, banana, taro</p>
+					</div>
+				</div>
+
+				<div class="row row-style justify-content-center">
+					<div class="col col-md-auto">
+						<h3 class="h3-food-item">Milk Tea with Boba & Grass Jelly</h3>
+							<p class="price">$8.95</p>
+							<p class="info">Milk tea with choice of topping</p>
+							<p class="types"><strong>Types: </strong>lychee jelly, grass jelly</p>
+					</div>
+						<div class="col col-md-auto">
+							<img src="images/grass-jelly.jpg" class="food-img">
+						</div>
+				</div>
+			</div>
 
 <!--Javascript BootStrap script-->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
