added comments of future changes

--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
 			<div class="row justify-content-md-center">
 				<div class="col col-lg-2 col-style">
 					<h2 class="h2-header">Menu</h2>
+					<!--... goes to the main page? idk-->
 				</div>
 				<div class="col col-lg-2 col-style">
 					<h2 class="h2-header">Gallery</h2>
+					<!--see how to use google review photos in grid sequence, disclaimer form Google photos, zoom affect-->
 				</div>
 				<div class="col col-lg-2 col-style">
 					<h2 class="h2-header">Location</h2>
+					<!--use the google api to set the location with the map view-->
 				</div>
 				<div class="col col-md-auto col-logo">
 					<img src="images/lily-garden-logo-no-border.png" class="logo-border">
