--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<div class="row justify-content-md-center">
 				<div class="col col-lg-2 col-style">
 					<h2 class="h2-header">Menu</h2>
-					<!--... goes to the main page? idk-->
+					<!--... goes to the main page? list-view of food items with prices?-->
 				</div>
 				<div class="col col-lg-2 col-style">
 					<h2 class="h2-header">Gallery</h2>
