changed to new restaurant choppin stix

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<!--use the google api to set the location with the map view-->
 				</div>
 				<div class="col col-md-auto col-logo">
-					<img src="images/lily-garden-logo-no-border.png" class="logo-border">
+					<img src="images/choppin-stix-logo.png" class="logo-border">
 				</div>
 				<!--add a stylized order button-->
 			</div>
@@ -41,20 +41,28 @@
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     		<span class="navbar-toggler-icon"></span>
   		</button>
-		<div class="collapse navbar-collapse" id="navbarText">
+		<div class="collapse navbar-collapse " id="navbarText">
 			 <ul class="navbar-nav ml-auto">
 		    	<li class="nav-item active">
 		        	<a class="nav-link" href="#apps">Appetizers <span class="sr-only">(current)</span></a>
 				</li>
+					<span class="vertical-bar"></span>
 				<li class="nav-item">
 		        	<a class="nav-link" href="#soups">Soups & Congee</a>
 				</li>
+					<span class="vertical-bar"></span>
 				<li class="nav-item">
 		        	<a class="nav-link" href="#salads">Salad</a>
 				</li>
+					<span class="vertical-bar"></span>
 				<li class="nav-item">
 		        	<a class="nav-link" href="#chefs">Chef's Specialties</a>
 				</li>
+					<span class="vertical-bar"></span>
+				<li class="nav-item">
+		        	<a class="nav-link" href="#desserts">Desserts</a>
+				</li>
+					<span class="vertical-bar"></span>
 				<li class="nav-item">
 		        	<a class="nav-link" href="#drinks">Bubble Tea</a>
 				</li>
@@ -67,7 +75,7 @@
 		<!--<img src="images/red-dumplings-bg.jpg" alt="red-dumplings-bg" width="100%" height="580px" id="opaque">-->
 		 <img src="images/dumpings-in-sauce-with-chopsticks.jpg" width="100%" height="580px" id="opaque">
 		<div class="center-text">
-			<h1 class="h1-lg" >Lily Garden Restaurant</h1>
+			<h1 class="h1-lg" >Choppin' Stix Restaurant</h1>
 		</div>
 	</div>
 
